test/functions/deitz/default/test_default4-error.future
jplevyak

Difference with test_default3-error is that there are now three candidates instead of two.
